readme and other minor changes
- added port for bootRun args
- updated ReadMe.md with more information

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 }
 
 bootRun {
-    args = ["--spring.profiles.active=${profile}"]
+    args = ["--spring.profiles.active=${profile}","--server.port=${port}"]
 }
 
 test {
@@ -56,6 +56,3 @@ spotless {
 }
 
 compileJava.dependsOn spotlessCheck
-
-
-
