implementation change to interact with MongoDB instead of external service

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,1 +1,3 @@
-handsetService=https://a511e938-a640-4868-939e-6eef06127ca1.mock.pstmn.io/handsets/list
+
+#cloud mondodb instead of having mongodb server in local
+spring.data.mongodb.uri=mongodb+srv://springboottest:<PASSWORD>@abc.aeboa.mongodb.net/TEST
