--- a/build.gradle
+++ b/build.gradle
@@ -30,14 +30,12 @@ sourceCompatibility = 1.8
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter'
     compile 'org.springframework.boot:spring-boot-starter-web'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.12'
-    compile 'com.testingsyndicate:hc-jmx:3.0.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    compile 'org.springframework.data:spring-data-mongodb'
+    compile 'org.apache.commons:commons-lang3:3.11'
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:3.2.4'
 }
 
 bootRun {
