--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,3 @@
-handsetService=https://abc/handsets/list
+
+#cloud mondodb instead of having mongodb server in local
+spring.data.mongodb.uri=mongodb+srv://springboottest:<PASSWORD>@abc.aeboa.mongodb.net/TEST
